fix: Fix shitty linebreaks in post and justify post content.

--- a/themes/yeldirium/source-raw/scss/component/_post.scss
+++ b/themes/yeldirium/source-raw/scss/component/_post.scss
@@ -14,6 +14,10 @@
     }
   }
 
+  &__content {
+    text-align: justify;
+  }
+
   &__navigation {
     &-list {
       display: grid;
